# uchess

./: .gitignore  CMakeLists.txt  README.md  main.cpp
resources/: resources.qrc  style.qss
src/: CMakeLists.txt  gamewindow.cpp  gamewindow.h  graphicsview.cpp  graphicsview.h  main.cpp  qfigure.cpp  qfigure.h
src/figures/: abstractfigure.cpp  abstractfigure.h  bishop.cpp  bishop.h  gamemanager.cpp  gamemanager.h  king.cpp  king.h  knight.cpp  knight.h  pawn.cpp  pawn.h  queen.cpp  queen.h  rook.cpp  rook.h
